[package]
name = "clippys"
version = "0.1.0"
authors = ["NishanthSpShetty <nishanthspshetty@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
structopt = { version = "0.3", default-features = false}
